--- a/vercel.json
+++ b/vercel.json
@@ -11,25 +11,9 @@
         "src": "/.*",
         "dest": "index.ts"
       }
-    ],
-    "headers": [
-      {
-        "source": "/.*",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, PUT, DELETE, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
-          }
-        ]
-      }
-    ]
+    ], 
+    "env": {
+      "MONGO_URI": "mongodb+srv://<username>:<password>@<cluster>/<dbname>?retryWrites=true&w=majority"
+    }
   }
   
