--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/app/.*",
-        "dest": "index.ts"
+        "dest": "/app/index.ts"
       }
     ]
   }
