--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "redis": "^4.6.13",
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb-memory-server": "^2.3.0",
