--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     env: 
-        MONGODB_URI: ${{secret.MONGODB_URI}}
-        SALT: ${{secret.SALT}}
-        JWT_SECRET: ${{secret.JWT_SECRET}}
-        REFRESH_TOKEN_SECRET: ${{secret.REFRESH_TOKEN_SECRET}}
+        MONGODB_URI: ${{secrets.MONGODB_URI}}
+        SALT: ${{secrets.SALT}}
+        JWT_SECRET: ${{secrets.JWT_SECRET}}
+        REFRESH_TOKEN_SECRET: ${{secrets.REFRESH_TOKEN_SECRET}}
