--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon -V",
-    "test": "jest --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
     "nodemon": "^3.1.0",
