--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    environment: production
+
+    services:
+        redis:
+            image: redis
+            options: >-
+                --health-cmd "redis-cli ping"
+                --health-interval 10s
+                --health-timeout 5s
+                --health-retries 5
 
     strategy:
       matrix:
