--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
