--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.12",
     "redis": "^4.6.13",
     "typescript-rest": "^3.0.4"
   },
