CI: update GitHub Actions workflow to include Redis URLs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,15 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    services:
-        redis:
-            image: redis
-            options: >-
-                --health-cmd "redis-cli ping"
-                --health-interval 10s
-                --health-timeout 5s
-                --health-retries 5
-
     strategy:
       matrix:
         node-version: [18.x]
@@ -43,3 +34,5 @@ jobs:
         SALT: ${{secrets.SALT}}
         JWT_SECRET: ${{secrets.JWT_SECRET}}
         REFRESH_TOKEN_SECRET: ${{secrets.REFRESH_TOKEN_SECRET}}
+        UPSTASH_REDIS_URL: ${{secrets.UPSTASH_REDIS_URL}}
+        REDIS_URL: ${{secrets.REDIS_URL}}
