--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
-    "nodemailer": "^6.9.12",
     "redis": "^4.6.13",
     "typescript-rest": "^3.0.4"
   },
@@ -25,11 +24,13 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "sinon": "^17.0.1",
     "supertest": "^6.3.4",
