--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "dependencies": {
+    "@types/redis-mock": "^0.17.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -16,6 +17,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "redis": "^4.6.13",
+    "redis-mock": "^0.56.3",
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
