--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
